Solved several issues with image element's captions and a bug in redactor's alignment function.
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@12555 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/elements/upfront-image/css/uimage.css
+++ b/elements/upfront-image/css/uimage.css
@@ -788,3 +788,9 @@ div.uimage-controls i.upfront-icon:before {
 	vertical-align: bottom;
 }
 
+.uimage-caption-over_image-bottom .redactor_box {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+
